# rules_pyvenv

./: BUILD.bazel  MODULE.bazel  README.md  requirements.txt  venv.bzl
example/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements_windows.txt
example/libraries/liba/: BUILD.bazel
example/libraries/libb/: BUILD.bazel
