###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "rules_pyvenv", version = "1.2.0", compatibility_level = 1)

bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.8",
)
python.toolchain(
    python_version = "3.9",
)
python.toolchain(
    python_version = "3.10",
)
python.toolchain(
    python_version = "3.11",
)
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(
    python,
    "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_pyvenv_pip_deps",
    python_version = "3.8",
    requirements_lock = ":requirements.txt",
)
pip.parse(
    hub_name = "rules_pyvenv_pip_deps",
    python_version = "3.9",
    requirements_lock = ":requirements.txt",
)
pip.parse(
    hub_name = "rules_pyvenv_pip_deps",
    python_version = "3.10",
    requirements_lock = ":requirements.txt",
)
pip.parse(
    hub_name = "rules_pyvenv_pip_deps",
    python_version = "3.11",
    requirements_lock = ":requirements.txt",
)
pip.parse(
    hub_name = "rules_pyvenv_pip_deps",
    python_version = "3.12",
    requirements_lock = ":requirements.txt",
)
use_repo(pip, "rules_pyvenv_pip_deps")
