# Copyright 2021 cedar.ai. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pip//:requirements.bzl", "data_requirement", "requirement")
load("@python_versions//3.12:defs.bzl", "compile_pip_requirements")
load("@rules_pyvenv//:venv.bzl", "py_venv")

package(default_visibility = ["//visibility:public"])

py_venv(
    name = "venv",
    data = [
        data_requirement("black"),
    ],
    extra_pip_commands = [
        # "install ipython jupyter-console",
    ],
    deps = [
        "//libraries/liba",
        requirement("black"),
        requirement("numpy"),
    ],
)

py_venv(
    name = "venv_only_local",
    deps = [
        "//libraries/liba",
        "//libraries/libb",
    ],
)

py_venv(
    name = "venv_only_local_always_link",
    always_link = True,
    deps = [
        "//libraries/liba",
        "//libraries/libb",
    ],
)

py_venv(
    name = "venv_relative_workspace_root",
    venv_location = ".venv",
    deps = [
        "//libraries/liba",
        "//libraries/libb",
    ],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    requirements_windows = "requirements_windows.txt",
)
